Block user works and added random id to custom alert for overlap issues

--- a/setup/myapp/app/assets/stylesheets/application.scss
+++ b/setup/myapp/app/assets/stylesheets/application.scss
@@ -189,7 +189,7 @@ body {
 }
 
 .scroll_list {
-    width: 200px;
+    padding: 5px;
     height: 150px;
     overflow-y: auto;
 }
